# graphpack

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/source/: bibliography.rst  compression-algorithm-glossary.rst  demo.rst  graph-compression-glossary.rst  license.rst  overview.rst  refs.bib  tutorial.rst  visualization.rst
docs/source/_files/: sankey_diagram.html
src/graphpack/: __init__.py  utils.py
src/graphpack/config/: additional_js  additional_js_old  const_options  physics_options_big  physics_options_small  style_options
src/graphpack/demo/: demo.py  sankey.py
tests/: test_compression.py  test_utils.py
